# ai

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
prompts/: fill.txt
src/: arguments.rs  config.rs  main.rs  model.rs  options.rs  provider.rs  service.rs  subcommand.rs
src/subcommand/: fill.rs  set_key.rs
